--- a/web/css/common.css
+++ b/web/css/common.css
@@ -1,13 +1,17 @@
+/* common style */
 body {
 	font-family: Arial;
 }
 
+a {
+	color: #66cc99;
+}
+
+a:hover {
+	color: #66cc99;
+}
+
 .page {
-	background-color: #fff;
-	width: 940px;
-	margin: 0 auto;
-	padding: 0 10px;
-	margin-top: 20px;
 	color: #797979;
 }
 
@@ -46,70 +50,27 @@ body {
 }
 
 /* header style*/
-.header {
-	width: 100%;
-	border-bottom: 4px solid #eee;
-}
-
-@media screen and (max-width: 960px) {
-	.header {
-		width: 960px;
-	}
-}
-
-.header-block {
-	width: 940px;
-	margin: 0 auto;
-	height: 36px;
-	padding: 8px 0;
-}
-
-.logo-title{
-	font-size: 32px;
-	line-height: 32px;
-	float: left;
-}
-
-.logo-title a,
-.log-btns a,
-.welcome-block a {
-	color: #66cc99;
+.logo-link:hover {
 	text-decoration: none;
 }
 
-.log-btns a,
-.welcome-block a {
-	text-decoration: underline;
-	display: inline-block;
-	padding: 9px 5px;
-}
-
+.nav-bar,
 .log-btns,
 .welcome-block {
-	float: right;
-	color: #797979;
+	margin-top: 30px;
 }
 
 .nav-bar {
-	float: left;
 	margin-left: 120px;
 }
 
 .nav-bar a {
-	display: inline-block;
 	margin-right: 10px;
-	padding: 9px 5px;
-	text-decoration: none;
 	color: #797979;
 	font-size: 18px;
-	height: 18px;
 }
 
 .nav-bar a:hover {
-	color: #66cc99;
-}
-
-.nav-bar a.current-tab {
 	color: #66cc99;
 }
 
@@ -118,9 +79,4 @@ body {
 	margin: 50px 0 20px 0;
 	text-align: center;
 	color: #797979;
-}
-
-/* common style*/
-.clearfix {
-	clear: both;
 }
